--- a/src/assets/css/Index.css
+++ b/src/assets/css/Index.css
@@ -1,99 +1,47 @@
-@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
-
-:root {
-    --light-bg: #efefef;
-    --dark-green: rgb(13, 99, 56);
-    --more-dark-green: rgb(10, 70, 37);
-}
-
 /* CONFIGURAÇÕES GERAIS */
-
 * {
-    font-family: "Comic Neue", cursive;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
-main {
+body,
+form {
     align-items: center;
     justify-content: center;
-    display: flex !important;
+    display: flex;
     height: 100dvh;
     flex-direction: column;
 }
 
+form {
+    gap: 10px;
+}
+
+label {
+    font-weight: 400;
+}
+
+span {
+    font-weight: 200;
+}
+
+input {
+    border: 1px solid gray;
+    padding: 12px 32px;
+    border-radius: 6px;
+}
+
 button {
+    color: white;
     cursor: pointer;
+    padding: 10px 28px;
+    background-color: red;
     border: none;
-    padding: 16px;
+    border-radius: 6px;
+    font-weight: 700;
 }
 
 button:hover {
-    background-color: rgb(184, 184, 184);
-    transition: background-color 0.3s ease-in-out;
-}
-
-.d-none {
-    display: none;
-}
-
-/* INDEX */
-.center-div {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.center-div h2 {
-    position: fixed;
-    top: 56%;
-}
-.cave-btn {
-    border-radius: 5px;
-    padding: 10px 48px;
-    background: var(--dark-green);
-    color: white;
-    font-size: larger;
-    font-weight: 600;
-}
-.cave-btn:hover {
-    background: var(--more-dark-green);
-}
-
-/* DASHBOARD */
-.dash-title {
-    display: flex;
-    gap: 10px;
-}
-
-.dashboard-header {
-    padding: 10px;
-    position: absolute;
-}
-
-.dashboard-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.item-dash {
-    padding: 6px 0;
-    display: flex;
-    gap: 10px;
-}
-
-.btn-dash {
-    height: 100%;
-    padding: 25px;
-    background-color: green;
-    border-radius: 9px;
-    color: white;
-}
-
-.btn-dash:hover {
-    background-color: darkgreen;
-}
-
-.btn-dash.disabled {
-    background-color: darkgreen;
-    cursor: auto;
+    background-color: darkred;
 }
